# Imagent

primitive/: .gitignore  README.md  docker-compose.yml
primitive/.github/workflows/: deploy.yml
primitive/backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
primitive/backend/app/: config.py  jobs.py  main.py  models.py  notifier.py
primitive/backend/primitive_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
primitive/web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
primitive/web/src/: App.tsx  index.css  main.tsx
primitive/web/src/pages/: Upload.tsx
