[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primitive-backend"
version = "0.1.0"
description = "FastAPI backend orchestrating Go primitive image engine"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "sqlmodel>=0.0.16",
  "aiofiles>=23.2",
  "python-multipart>=0.0.9",
  "orjson>=3.10",
  "python-dotenv>=1.0",
]

[tool.setuptools]
packages = ["app"] 