[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primitive-backend"
version = "0.1.0"
description = "FastAPI backend orchestrating Go primitive image engine"
requires-python = ">=3.10"
# Dependencies are now managed via requirements.txt for runtime installs.
# Keeping below for dev/packaging parity is optional.
dependencies = []

[tool.setuptools]
packages = ["app"] 